--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-file-reader": "^1.1.4",
     "react-papaparse": "^3.11.1",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
